[gd_scene load_steps=23 format=1]

[ext_resource path="res://cooker/Game.gd" type="Script" id=1]
[ext_resource path="res://cooker/pic/03.jpg" type="Texture" id=2]
[ext_resource path="res://cooker/pic/01.jpg" type="Texture" id=3]
[ext_resource path="res://cooker/tilesets/tile.tres" type="TileSet" id=4]
[ext_resource path="res://cooker/Grid.gd" type="Script" id=5]
[ext_resource path="res://cooker/GridVisualizer.gd" type="Script" id=6]
[ext_resource path="res://cooker/fail.png" type="Texture" id=7]
[ext_resource path="res://cooker/success.png" type="Texture" id=8]
[ext_resource path="res://cooker/palette.tscn" type="PackedScene" id=9]
[ext_resource path="res://cooker/list.tscn" type="PackedScene" id=10]
[ext_resource path="res://cooker/question.tscn" type="PackedScene" id=11]
[ext_resource path="res://cooker/small/half_resized.png" type="Texture" id=12]
[ext_resource path="res://cooker/small/number_resized.png" type="Texture" id=13]
[ext_resource path="res://cooker/small/Obstacle_resized.png" type="Texture" id=14]
[ext_resource path="res://cooker/small/Obstacle_1_resized.png" type="Texture" id=15]
[ext_resource path="res://cooker/small/Obstacle_3_resized.png" type="Texture" id=16]
[ext_resource path="res://cooker/small/Obstacle_4_resized.png" type="Texture" id=17]
[ext_resource path="res://cooker/small/update-arrow_resized.png" type="Texture" id=18]
[ext_resource path="res://cooker/small/UP_resized.png" type="Texture" id=19]
[ext_resource path="res://cooker/small/DOWN_resized.png" type="Texture" id=20]
[ext_resource path="res://cooker/small/LEFT_resized.png" type="Texture" id=21]
[ext_resource path="res://cooker/small/RIGHT_resized.png" type="Texture" id=22]

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 1021.22, 331.657 )
transform/scale = Vector2( 1.55443, 2.11694 )
z/z = -1
texture = ExtResource( 2 )

[node name="command_bg" type="Sprite" parent="."]

transform/pos = Vector2( 423.22, 560.415 )
transform/scale = Vector2( 2.91782, 1.22057 )
texture = ExtResource( 3 )

[node name="Grid" type="TileMap" parent="."]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 65, 65 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -655337, 0, 0, 4, 1, 3, 2, 4, 3, 3, 4, 4, 5, 3, 6, 4, 7, 3, 8, 4, 9, 3, 10, 4, 11, 3, 12, 4, 65536, 3, 65537, 4, 65538, 3, 65539, 4, 65540, 3, 65541, 4, 65542, 3, 65543, 4, 65544, 3, 65545, 4, 65546, 3, 65547, 4, 65548, 3, 131072, 4, 131073, 3, 131074, 4, 131075, 3, 131076, 4, 131077, 3, 131078, 4, 131079, 3, 131080, 4, 131081, 3, 131082, 4, 131083, 3, 131084, 4, 196608, 3, 196609, 4, 196610, 3, 196611, 4, 196612, 3, 196613, 4, 196614, 3, 196615, 4, 196616, 3, 196617, 4, 196618, 3, 196619, 4, 196620, 3, 262144, 4, 262145, 3, 262146, 4, 262147, 3, 262148, 4, 262149, 3, 262150, 4, 262151, 3, 262152, 4, 262153, 3, 262154, 4, 262155, 3, 262156, 4, 327680, 3, 327681, 4, 327682, 3, 327683, 4, 327684, 3, 327685, 4, 327686, 3, 327687, 4, 327688, 3, 327689, 4, 327690, 3, 327691, 4, 327692, 3, 393216, 4, 393217, 3, 393218, 4, 393219, 3, 393220, 4, 393221, 3, 393222, 4, 393223, 3, 393224, 4, 393225, 3, 393226, 4, 393227, 3, 393228, 4 )
script/script = ExtResource( 5 )

[node name="GridVisualizer" type="Node2D" parent="Grid"]

script/script = ExtResource( 6 )

[node name="fail" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 435, 221 )
texture = ExtResource( 7 )

[node name="success" type="Sprite" parent="Grid"]

visibility/visible = false
transform/pos = Vector2( 446, 228 )
texture = ExtResource( 8 )

[node name="palette" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 995.034, 58.9715 )

[node name="commands" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 487.0
margin/right = 827.0
margin/bottom = 527.0
alignment = 0

[node name="commands1" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 541.0
margin/right = 827.0
margin/bottom = 581.0
alignment = 0

[node name="commands2" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 596.0
margin/right = 827.0
margin/bottom = 636.0
alignment = 0

[node name="list" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 1000.44, 405.398 )

[node name="question" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 1061.28, 492.868 )

[node name="half" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 672.0
margin/top = 672.0
margin/right = 714.0
margin/bottom = 708.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="number" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 727.0
margin/top = 676.0
margin/right = 766.0
margin/bottom = 709.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 13 )
flat = true

[node name="Obstacle" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 782.0
margin/top = 681.0
margin/right = 825.0
margin/bottom = 701.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[node name="Obstacle_1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 856.0
margin/top = 669.0
margin/right = 902.0
margin/bottom = 709.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = true

[node name="Obstacle_3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 943.0
margin/top = 675.0
margin/right = 985.0
margin/bottom = 711.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true

[node name="Obstacle_4" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1023.0
margin/top = 676.0
margin/right = 1065.0
margin/bottom = 712.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 17 )
flat = true

[node name="Obstacle_2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1114.0
margin/top = 673.0
margin/right = 1152.0
margin/bottom = 705.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 18 )
flat = true

[node name="command_up" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 609.0
margin/top = 675.0
margin/right = 661.0
margin/bottom = 721.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 19 )
flat = true

[node name="command_down" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 551.0
margin/top = 675.0
margin/right = 603.0
margin/bottom = 721.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 20 )
flat = true

[node name="command_left" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 492.0
margin/top = 673.0
margin/right = 544.0
margin/bottom = 719.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 21 )
flat = true

[node name="command_right" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 437.0
margin/top = 669.0
margin/right = 489.0
margin/bottom = 715.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 22 )
flat = true


